# csc435-grpc-tutorial

./: README.md
app-cpp/: CMakeLists.txt
app-cpp/include/: MathFormulaImpl.hpp  Server.hpp
app-cpp/protos/: math_formula.proto
app-cpp/src/: Client.cpp  MathFormulaImpl.cpp  Server.cpp
app-java/src/main/java/csc435/app/: Server.java
app-java/src/main/proto/csc435/app/: math_formula.proto
